<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_alignParentTop="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/cuadro_personalizado">
    <Button
        android:id="@+id/btnClose"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_close"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin6dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvFechaMin"
            android:gravity="right"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:textSize="@dimen/tamanoLetraMedia"
            android:paddingRight="@dimen/marginTopEmail"
            android:layout_height="wrap_content"

            android:text="@string/fecha"/>
        <Button
            android:id="@+id/dateMinPicker"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="JAN 01 2021"
            style="?android:spinnerStyle"
            android:textAlignment="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin6dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvFechaMax"
            android:layout_width="0dp"
            android:gravity="right"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/marginTopEmail"
            android:textSize="@dimen/tamanoLetraMedia"
            android:text="@string/fechaMax"/>
        <Button
            android:id="@+id/dateMaxPicker"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="JAN 01 2021"
            style="?android:spinnerStyle"
            android:textAlignment="center"/>

    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin6dp"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/tvComunidad"
        android:layout_width="0dp"
        android:gravity="right"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:textSize="@dimen/tamanoLetraMedia"
        android:text="@string/comunidad"/>
    <Spinner
        android:id="@+id/spComunidad"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginTopLogo"/>

</LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin6dp"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/tvCiudad"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:gravity="right"
        android:layout_height="wrap_content"
        android:textSize="@dimen/tamanoLetraMedia"
        android:text="@string/ciudad"/>
    <EditText
        android:id="@+id/etCiudad"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginTopLogo"/>

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin6dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvTipoEvento"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:gravity="right"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tamanoLetraMedia"
            android:text="@string/tipo"/>
        <Spinner
            android:id="@+id/spTipo"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginTopLogo"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin6dp"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnEliminarFiltro"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/secundarybutton"
            android:layout_marginRight="@dimen/marginTopLogo"
            android:text="@string/eliminarFiltros"/>
        <Button
            android:id="@+id/btnFiltrar"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:background="@drawable/accentbutton"
            android:text="@string/filtrar"/>
        </LinearLayout>

</LinearLayout>