<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_alignParentTop="true"
    android:layout_width="match_parent"
    android:background="@drawable/cuadro_personalizado"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/btnCloseModificar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_close"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:gravity="center"
        android:background="@drawable/cuadro_personalizado"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin6dp"
            android:orientation="horizontal">

                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modificarParticipantes"
                android:textSize="@dimen/tamanoLetraMedia"
                android:padding="10dp"/>

                <EditText
                android:id="@+id/etNumPersonasModificar"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <Button
            android:id="@+id/btnModificarPersonas"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/secundarybutton"
            android:text="@string/textModificar"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin6dp"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnDesapuntarse"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:background="@drawable/accentbutton"
            android:text="@string/textDesapuntarse"/>
        </LinearLayout>

</LinearLayout>