<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/widthLogo"
        android:layout_height="@dimen/heightLogo"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/marginTopLogo"
        android:background="@drawable/logosinfondo"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/marginLeftEmail"
        android:layout_marginTop="@dimen/marginTopEmail">

        <TextView
            android:layout_marginLeft="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textNombre"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="@dimen/tamanoLetraGrande"
            />
        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="@dimen/editTextSize"
            android:layout_marginLeft="@dimen/marginLeftText"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/tamanoLetraGrande"
            android:inputType="textEmailAddress"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/marginLeftEmail"
        android:layout_marginTop="@dimen/marginTopEmail">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textApellido"
            android:textSize="@dimen/tamanoLetraGrande"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            />
        <TextView
            android:id="@+id/tvApellido"
            android:layout_width="@dimen/editTextSize"
            android:layout_marginLeft="@dimen/marginLeftText"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/tamanoLetraGrande"
            android:inputType="textEmailAddress"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/marginLeftEmail"
        android:layout_marginTop="@dimen/marginTopEmail">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textEMAIL"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/tamanoLetraGrande"
            android:textStyle="bold"
            android:layout_marginLeft="50dp"
            />
        <TextView
            android:id="@+id/tvEMAIL"
            android:layout_width="@dimen/editTextSize"
            android:layout_marginLeft="@dimen/marginLeftText"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/tamanoLetraGrande"
            android:inputType="textEmailAddress"/>

    </LinearLayout>



    <Button
        android:id="@+id/btnLogin"
        style="@style/buttonPrimary"
        android:layout_width="250dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:text="@string/textCerrar"
        android:layout_marginTop="@dimen/marginTopLogin"/>



</LinearLayout>